--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,18 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "material-icons": "^1.13.12",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
-  }
+  },
+  "devDependencies": {
+    "daisyui": "^3.8.3",
+    "encoding": "^0.1.13"
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
