--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "firebase": "^10.4.0",
     "material-icons": "^1.13.12",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
