--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "cls && npx nodemon",
+    "dev": "clear && npx nodemon",
     "start": "node index.js",
     "lint": "npx eslint ."
   },
