--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "daisyui": "^3.8.3",
