--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.0.13",
     "@types/node": "20.8.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
@@ -17,6 +18,7 @@
     "eslint-config-next": "13.5.4",
     "firebase": "^10.4.0",
     "material-icons": "^1.13.12",
+    "mongoose": "^8.0.3",
     "next": "latest",
     "next-auth": "^4.23.2",
     "postcss": "8.4.31",
