--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "firebase": "^10.4.0",
     "material-icons": "^1.13.12",
     "mongoose": "^8.0.3",
-    "next": "latest",
-    "next-auth": "^4.23.2",
+    "next": "^14.0.4",
+    "openai": "^4.24.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
