--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "autoprefixer": "10.4.16",
+    "date-fns": "^3.0.6",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
-    "firebase": "^10.4.0",
     "material-icons": "^1.13.12",
     "mongoose": "^8.0.3",
     "next": "^14.0.4",
     "openai": "^4.24.1",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "experimental",
+    "react-dom": "experimental",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uid": "^2.0.2"
