--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "studysync",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
     "@types/react-dom": "18.2.8",
     "array-shuffle": "^3.0.0",
     "autoprefixer": "10.4.16",
-    "date-fns": "^3.0.6",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "material-icons": "^1.13.12",
@@ -23,8 +22,8 @@
     "next": "^14.0.4",
     "openai": "^4.24.1",
     "postcss": "8.4.31",
-    "react": "experimental",
-    "react-dom": "experimental",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uid": "^2.0.2"
