--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "uid": "^2.0.2"
+    "uid": "^2.0.2",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/shuffle-array": "^1.0.5",
